Add language, people group, disability data

--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -33,8 +33,15 @@
             }
 
             .aggregated-container {
+                display: flex;
+                flex-direction: column;
                 border: var(--width-separator-thin) solid var(--color-separator);
                 width: var(--width-aggregated-data);
+                overflow-y: auto;
+
+                .aggregated {
+                    flex-grow: 1;
+                }
             }
         }
     }
