--- a/client/src/components/ParticipationItem/styles.scss
+++ b/client/src/components/ParticipationItem/styles.scss
@@ -14,6 +14,7 @@
         align-items: flex-end;
         flex-direction: column;
         justify-content: right;
+        padding-right: var(--spacing-small);
         font-size: var(--font-size-medium-alt);
 
         .total {
