--- a/client/src/stylesheets/_base.scss
+++ b/client/src/stylesheets/_base.scss
@@ -37,6 +37,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
     color: var(--color-text);
     font-family: var(--font-family-sans-serif);
     font-size: var(--font-size-default);
