Add total rc dropped and temporarily away

--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -193,6 +193,10 @@
                 .table {
                     align-self: flex-start;
                 }
+
+                .sso {
+                    align-self: center;
+                }
             }
         }
 
