--- a/client/src/views/Dashboard/Summary/styles.scss
+++ b/client/src/views/Dashboard/Summary/styles.scss
@@ -28,7 +28,7 @@
         }
 
         .date {
-            padding: 0 var(--spacing-smaller);
+            padding: 0 var(--spacing-small);
 
             &:last-child ::after {
                 content: '.';
@@ -47,6 +47,11 @@
             text-transform: capitalize;
             color: var(--color-accent);
             font-weight: var(--font-weight-bold);
+        }
+
+        .date {
+            display: inline-block;
+            padding: 0 var(--spacing-small);
         }
 
         .table {
