Resolve scss tooltip issue

--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -259,13 +259,13 @@
     cursor: pointer;
 }
 
-.custom-Tooltip {
+.custom-tooltip {
     padding: var(--spacing-medium) var(--spacing-large);
     background-color: var(--color-foreground);
     box-shadow: 0 var(--spacing-medium) var(--spacing-medium) 0 var(--color-separator-alt);
 }
 
-.custom-Tooltip-Value {
+.custom-tooltip-Value {
     text-align: center;
     margin-top: 0;
     margin-bottom: 0;
