--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -265,7 +265,7 @@
     box-shadow: 0 var(--spacing-medium) var(--spacing-medium) 0 var(--color-separator-alt);
 }
 
-.custom-tooltip-Value {
+.custom-tooltip-value {
     text-align: center;
     margin-top: 0;
     margin-bottom: 0;
