Add Partictipation details, MVC count, MVC Marker stats to individual report

--- a/client/src/views/Report/styles.scss
+++ b/client/src/views/Report/styles.scss
@@ -238,10 +238,26 @@
                         }
 
                         .viz {
-                            height: 180px;
                             margin-left: var(--spacing-extra-large);
+                            height: 180px;
                         }
                     }
+                }
+            }
+        }
+
+        .report {
+            display: flex;
+
+            .container {
+                display: flex;
+                flex-grow: 1;
+                padding: var(--spacing-medium) var(--spacing-extra-large);
+
+                .list {
+                    display: table;
+                    width: 100%;
+                    border-collapse: collapse;
                 }
             }
         }
