--- a/client/src/views/Dashboard/Summary/styles.scss
+++ b/client/src/views/Dashboard/Summary/styles.scss
@@ -68,6 +68,7 @@
 
         .table {
             display: table;
+            width: 100%;
             border-collapse: collapse;
         }
 
@@ -77,6 +78,7 @@
 
             .table {
                 flex-grow: 1;
+                width: calc(100% - 180px);
             }
 
             .child-family {
